--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "repl_python3_FruitfulBeneficialObjectmodel"
+name = "backcomm"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "This package provides commission utility classes to be used with backtrader"
+authors = ["Pablo Perez <dalotodo69@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
